<?xml version="1.0" encoding="utf-8"?><!--
    Copyright 2018 Kartik Arora

    Licensed under the Apache License, Version 2.0 (the "License");
    you may not use this file except in compliance with the License.
    You may obtain a copy of the License at

    http://www.apache.org/licenses/LICENSE-2.0

    Unless required by applicable law or agreed to in writing, software
    distributed under the License is distributed on an "AS IS" BASIS,
    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
    See the License for the specific language governing permissions and
    limitations under the License.
-->
<resources>
    <string name="app_name" translatable="false">Transfer.sh</string>
    <string name="mwlii_text" translatable="false">
        <![CDATA[Made with <span style="color: #e74c3c">&hearts;</span> in India]]>
    </string>
    <string name="app_id" translatable="false">ca-app-pub-5219660827342005~8629242571</string>
    <string name="ad_unit_id" translatable="false">ca-app-pub-5219660827342005/1105975776</string>
    <string name="content_authority" translatable="false">me.kartikarora.transfersh</string>

    <string name="no_files_uploaded">No files uploaded</string>
    <string name="download_complete">Download Complete</string>
    <string name="uploading_file">Uploading %1$s</string>
    <string name="something_went_wrong">Something went wrong</string>
    <string name="uploaded">uploaded</string>
    <string name="report">Report</string>
    <string name="download_file">Download this file using</string>
    <string name="permission_message">Need permission to save file locally</string>
    <string name="unable_to_read">Unable to read file</string>
    <string name="title_activity_about">About</string>
    <string name="about_app">About App</string>
    <string name="open_source_licenses">Open Source Licenses</string>
    <string name="dev_text">Developed and maintained by Kartik Arora</string>
    <string name="design_text">MimeType images designed by Freepik</string>
    <string name="feedback_suggestions">Send feedback or suggestions</string>
    <string name="view_list">View as list</string>
    <string name="view_grid">View as grid</string>
    <string name="play_store_text">Rate and/or review on Play Store</string>
    <string name="share">Share</string>
    <string name="mimetype_image">Mimetype Image</string>
    <string name="server_error">Server Error</string>
    <string name="server_error_message">Server at %1$s could not be found or is not a valid Transfer.sh server. Please enter the correct URL</string>
    <string name="setup_url_message">Enter the URL with which you would like to use this service. Press %1$s if you want to use the default server.</string>
    <string name="setup_url_message_change">Enter the URL with which you would like to use this service. Press %1$s if you want to use the current server.</string>
    <string name="setup_url">Enter URL</string>
    <string name="set_server_url">Set server URL</string>
    <string name="please_wait">Please wait</string>
</resources>
