<?xml version="1.0" encoding="utf-8"?><!--
    Copyright 2018 Kartik Arora

    Licensed under the Apache License, Version 2.0 (the "License");
    you may not use this file except in compliance with the License.
    You may obtain a copy of the License at

    http://www.apache.org/licenses/LICENSE-2.0

    Unless required by applicable law or agreed to in writing, software
    distributed under the License is distributed on an "AS IS" BASIS,
    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
    See the License for the specific language governing permissions and
    limitations under the License.
-->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:orientation="vertical">

        <android.support.v7.widget.CardView
            android:id="@+id/about_card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/activity_horizontal_margin"
                android:text="@string/about_app"
                android:textColor="@color/primary_text"
                android:textSize="20sp" />
        </android.support.v7.widget.CardView>

        <View
            android:layout_width="match_parent"
            android:layout_height="4dp"
            android:background="@android:color/transparent" />

        <android.support.v7.widget.CardView
            android:id="@+id/open_source_licenses_card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/activity_horizontal_margin"
                android:text="@string/open_source_licenses"
                android:textColor="@color/primary_text"
                android:textSize="20sp" />

        </android.support.v7.widget.CardView>

        <View
            android:layout_width="match_parent"
            android:layout_height="4dp"
            android:background="@android:color/transparent" />

        <android.support.v7.widget.CardView
            android:id="@+id/feedback_card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/activity_horizontal_margin"
                android:text="@string/feedback_suggestions"
                android:textColor="@color/primary_text"
                android:textSize="20sp" />

        </android.support.v7.widget.CardView>

        <View
            android:layout_width="match_parent"
            android:layout_height="4dp"
            android:background="@android:color/transparent" />

        <android.support.v7.widget.CardView
            android:id="@+id/play_store_card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/activity_horizontal_margin"
                android:text="@string/play_store_text"
                android:textColor="@color/primary_text"
                android:textSize="20sp" />

        </android.support.v7.widget.CardView>

        <View
            android:layout_width="match_parent"
            android:layout_height="4dp"
            android:background="@android:color/transparent" />
    </LinearLayout>

    <TextView
        android:id="@+id/dev_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/design_text_view"
        android:gravity="center"
        android:paddingBottom="@dimen/small_button"
        android:paddingEnd="@dimen/activity_vertical_margin"
        android:paddingStart="@dimen/activity_vertical_margin"
        android:text="@string/dev_text"
        android:textColor="@color/primary_text"
        android:textSize="16sp" />

    <TextView
        android:id="@id/design_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/mwlii_text_view"
        android:gravity="center"
        android:paddingBottom="@dimen/small_button"
        android:paddingEnd="@dimen/activity_vertical_margin"
        android:paddingStart="@dimen/activity_vertical_margin"
        android:text="@string/design_text"
        android:textColor="@color/primary_text"
        android:textSize="16sp" />

    <TextView
        android:id="@id/mwlii_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="center"
        android:paddingBottom="@dimen/small_button"
        android:paddingEnd="@dimen/activity_vertical_margin"
        android:paddingStart="@dimen/activity_vertical_margin"
        android:textColor="@color/primary_text"
        android:textSize="16sp" />

</RelativeLayout>